manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeserve-service
spec:
  type: NodePort
  selector:
    app: kubeserve
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
